Primer paso para agregar georreferencia

--- a/gime.qrc
+++ b/gime.qrc
@@ -5,6 +5,7 @@
 <file>icons/cca.png</file>
 <file>icons/clock.png</file>
 <file>icons/document-open.png</file>
+<file>icons/eye.png</file>
 <file>icons/folder-new.png</file>
 <file>icons/format-text-bold.png</file>
 <file>icons/go-first.png</file>
