--- a/gime.qrc
+++ b/gime.qrc
@@ -15,6 +15,7 @@
 <file>icons/go-up.png</file>
 <file>icons/list-add.png</file>
 <file>icons/list-remove.png</file>
+<file>icons/mapa.png</file>
 <file>icons/start-here.png</file>
 <file>icons/view-refresh.png</file>
 </qresource>
